@@ -7,6 +7,8 @@ $cacti_base = '../../';
 $cacti_url = '/';
 $ignore_cacti=FALSE;
 
+$config['base_url'] = $cacti_url;
+
 @include_once('editor-config.php');
 
 // check if the goalposts have moved
@@ -14,21 +16,27 @@ if( is_dir($cacti_base) && file_exists($cacti_base."/include/global.php") )
 {
 	// include the cacti-config, so we know about the database
 	include_once($cacti_base."/include/global.php");
-	$config['base_url'] = $cacti_url;
+	// $config['base_url'] = $cacti_url;
+	$config['base_url'] = (isset($config['url_path'])? $config['url_path'] : $cacti_url);
 	$cacti_found = TRUE;
+	// print "global";
 }
 elseif( is_dir($cacti_base) && file_exists($cacti_base."/include/config.php") )
 {
 	// include the cacti-config, so we know about the database
 	include_once($cacti_base."/include/config.php");
 
-	$config['base_url'] = $cacti_url;
+	// $config['base_url'] = $cacti_url;
+	$config['base_url'] = (isset($config['url_path'])? $config['url_path'] : $cacti_url);
 	$cacti_found = TRUE;
+	// print "config";
 }
 else
 {
 	$cacti_found = FALSE;
 }
+
+// print $config['base_url'];
 
 // ******************************************
 
@@ -272,9 +280,79 @@ if(sizeof($hosts) > 0) {
 
 if(isset($_REQUEST['command']) && $_REQUEST["command"]=='node_step1')
 {
+	$host_id = -1;
+	$SQL_picklist = "SELECT graph_templates_graph.id, graph_local.host_id, graph_templates_graph.local_graph_id, graph_templates_graph.height, graph_templates_graph.width, graph_templates_graph.title_cache, graph_templates.name, graph_local.host_id	FROM (graph_local,graph_templates_graph) LEFT JOIN graph_templates ON (graph_local.graph_template_id=graph_templates.id) WHERE graph_local.id=graph_templates_graph.local_graph_id ";
+	
+	$overlib = true;
+	$aggregate = false;
+	
+	if(isset($_REQUEST['aggregate'])) $aggregate = ( $_REQUEST['aggregate']==0 ? false : true);
+	if(isset($_REQUEST['overlib'])) $overlib= ( $_REQUEST['overlib']==0 ? false : true);
+	
+	
+	if(isset($_REQUEST['host_id']))
+	{
+		$host_id = intval($_REQUEST['host_id']);
+		if($host_id>=0) $SQL_picklist .= " and graph_local.host_id=$host_id ";
+	}
+	$SQL_picklist .= " order by title_cache";	
+	
+	 $hosts = db_fetch_assoc("select id,CONCAT_WS('',description,' (',hostname,')') as name from host order by description,hostname");	
+
 ?>
 <html>
 <head>
+<script type="text/javascript" src="lib/javascript/jquery-latest.pack.js"></script>
+<script type="text/javascript">
+
+	function filterlist(previous)
+	{
+		var filterstring = $('input#filterstring').val();	
+		
+		if(filterstring=='')
+		{
+			$('ul#dslist > li').show();
+			return;
+		}
+		
+		if(filterstring!=previous)
+		{	
+				$('ul#dslist > li').hide();
+				$('ul#dslist > li').contains(filterstring).show();
+		}
+	}
+
+	$(document).ready( function() {
+		$('span.filter').keyup(function() {
+			var previous = $('input#filterstring').val();
+			setTimeout(function () {filterlist(previous)}, 500);
+		}).show();
+	});
+
+	function applyDSFilterChange(objForm) {
+                strURL = '?host_id=' + objForm.host_id.value;
+                strURL = strURL + '&command=node_step1';
+				if( objForm.overlib.checked)
+				{
+					strURL = strURL + "&overlib=1";
+				}
+				else
+				{
+					strURL = strURL + "&overlib=0";
+				}
+				
+				//if( objForm.aggregate.checked)
+				//{
+				//	strURL = strURL + "&aggregate=1";
+				//}
+				//else
+				//{
+				//	strURL = strURL + "&aggregate=0";
+				//}
+                document.location = strURL;
+        }
+	
+	</script>
 	<script type="text/javascript">
 
 	function update_source_step1(graphid)
@@ -285,10 +363,14 @@ if(isset($_REQUEST['command']) && $_REQUEST["command"]=='node_step1')
 
 		if (typeof window.opener == "object") {
 
-			graph_url = base_url + 'graph_image.php?local_graph_id=' + graphid + '&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300';
+			graph_url = base_url + 'graph_image.php?rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300&local_graph_id=' + graphid;
 			info_url = base_url + 'graph.php?rra_id=all&local_graph_id=' + graphid;
 
-			opener.document.forms["frmMain"].node_infourl.value = info_url;
+			// only set the overlib URL unless the box is checked
+			if( document.forms['mini'].overlib.checked)
+			{
+				opener.document.forms["frmMain"].node_infourl.value = info_url;
+			}
 			opener.document.forms["frmMain"].node_hover.value = graph_url;
 		}
 		self.close();		
@@ -303,7 +385,7 @@ ul li.row1 { background: #ccc;}
 ul li { border-bottom: 1px solid #aaa; border-top: 1px solid #eee; padding: 2px;}
 ul li a { text-decoration: none; color: black; }
 </style>
-<title>Pick a data source</title>
+<title>Pick a graph</title>
 </head>
 <body>
 
@@ -313,7 +395,9 @@ ul li a { text-decoration: none; color: black; }
 
 #	$SQL_picklist = "select data_template_data.local_data_id, data_template_data.name_cache, data_template_data.active, data_template_data.data_source_path from data_local,data_template_data,data_input,data_template  left join data_input on data_input.id=data_template_data.data_input_id left join data_template on data_local.data_template_id=data_template.id where data_local.id=data_template_data.local_data_id order by name_cache;";
 #	$SQL_picklist = "select data_template_data.local_data_id, data_template_data.name_cache, data_template_data.active, data_template_data.data_source_path from data_local,data_template_data,data_input,data_template where data_local.id=data_template_data.local_data_id and data_input.id=data_template_data.data_input_id and data_local.data_template_id=data_template.id order by name_cache;";
-	$SQL_picklist = "SELECT graph_templates_graph.id, graph_templates_graph.local_graph_id, graph_templates_graph.height, graph_templates_graph.width, graph_templates_graph.title_cache, graph_templates.name, graph_local.host_id	FROM (graph_local,graph_templates_graph) LEFT JOIN graph_templates ON (graph_local.graph_template_id=graph_templates.id) WHERE graph_local.id=graph_templates_graph.local_graph_id order by title_cache";
+
+	
+	
 	#$link = mysql_connect($database_hostname,$database_username,$database_password)
 	#  or die('Could not connect: ' . mysql_error());
 	#  mysql_selectdb($database_default,$link) or die('Could not select database: '.mysql_error());
@@ -323,8 +407,28 @@ ul li a { text-decoration: none; color: black; }
 
 <h3>Pick a graph:</h3>
 
-<ul>
-<?php
+<form name="mini">
+<?php 
+if(sizeof($hosts) > 0) {
+	print 'Host: <select name="host_id"  onChange="applyDSFilterChange(document.mini)">';
+
+	print '<option '.($host_id==-1 ? 'SELECTED' : '' ).' value="-1">Any</option>';
+	print '<option '.($host_id==0 ? 'SELECTED' : '' ).' value="0">None</option>';
+	foreach ($hosts as $host)
+	{
+		print '<option ';
+		if($host_id==$host['id']) print " SELECTED ";
+		print 'value="'.$host['id'].'">'.$host['name'].'</option>';
+	}
+	print '</select><br />';
+}
+
+	print '<span class="filter" style="display: none;">Filter: <input id="filterstring" name="filterstring" size="20"> (case-sensitive)<br /></span>';
+	print '<input id="overlib" name="overlib" type="checkbox" value="yes" '.($overlib ? 'CHECKED' : '' ).'> <label for="overlib">Set both OVERLIBGRAPH and INFOURL.</label><br />';
+	// print '<input id="aggregate" name="aggregate" type="checkbox" value="yes" '.($aggregate ? 'CHECKED' : '' ).'> <label for="aggregate">Append TARGET to existing one (Aggregate)</label>';
+
+	print '</form><div class="listcontainer"><ul id="dslist">';
+
 	$queryrows = db_fetch_assoc($SQL_picklist);
 
 	// print $SQL_picklist;
