@@ -3,12 +3,13 @@
         ADDED - a basic 'live view' function which generates a map on demand.
 	ADDED - improved data-source picker in editor: host filter
 	ADDED - improved data-source picker in editor: option to aggregate data sources
+	ADDED - Moved data-source picker changes across into the graph-picker for NODEs too.
 	ADDED - SPLITPOS keyword to control position of midpoint in links
 	FIXED - KEYOUTLINECOLOR is actually used now (thanks again to llow)
 	FIXED - Editor doesn't throw away WIDTH and HEIGHT with no BG image
-	FIXED - Data-source picker doesn't restrict scrolling or resizing anymore
+	FIXED - Cacti Data-source and Graph picker doesn't restrict scrolling or resizing anymore
 	ADDED - VIAs can be positioned relative to NODEs (like NODEs can) (thanks to llow once more)
-
+	
 0.941	FIXED - Issue with '-' DS names again.
 	FIXED - Added extra code to help discourage browser caching.
 	FIXED - Removed some extra chatty debugging code from poller_output.
